# EventGhost-Rust

./: .cursorrules  .orginal_output.json  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Error-list1  LESSONS.md  PLUGINARCHITECTURE.md  PLUGINRULESTEMPLATE.md  README.md  TODO.md  build.rs  build_output.txt  builderrors.txt  buttclicker.egtree  cmd_output.txt  drag_drop_fixed.rs  error_log  gitdiff.txt  output.json  run_output.txt  update_imports.ps1  update_imports.sh
assets/: style.css
docs/: ARCHITECTURE.md  GUI_ARCHITECTURE.md  LESSONS_LEARNED.md  README.md  action-system-progress.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE.md  EVENTS.md  GUI_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LESSONS_LEARNED.md  OVERVIEW.md  PLUGIN_ARCHITECTURE.md  PYTHON_TO_RUST.md  SKELETON_STRUCTURE.md
docs/guides/developer/: README.md
docs/plugins/: README.md  directory_watcher.rst  eventghost_core.rst  file_operations.rst  global_monitor.rst  google_chrome.rst  igorplugudp.rst  index.rst  keyboard.rst  mouse.rst  mqtt.rst  network.rst  onkyoiscp.rst  ping.rst  process_watcher.rst  radiosure.rst  scheduleghost.rst  serial.rst  speech.rst  system.rst  task.rst  template.rst  timer.rst  webserver.rst  window.rst
docs/uml/: README.md  architecture.puml  plugin_system.puml  refcell_patterns.puml  ui_components.puml
eventghost/plugins/GoogleChrome/: __init__.py
eventghost/plugins/MQTT Client/: __init__.py
eventghost/plugins/MQTT Client/paho/mqtt/: client.py.bak
examples/: globals_example.rs
plugins/logger/: Cargo.toml
plugins/logger/src/: lib.rs
src/: cli.rs  lib.rs  main.rs  resources.gresource  resources.gresource.xml
src/core/: action.rs  config.rs  config_manager.rs  constants.rs  error.rs  event.rs  flow.rs  gui.rs  init.rs  logging.rs  macro.rs  mod.rs  named_pipe.rs  plugin.rs  plugin_loader.rs  utils.rs
src/core/actions/: mod.rs
src/core/actions/flow/: conditional.rs  delay.rs  loop_action.rs  mod.rs
src/core/actions/system/: file_operations.rs  mod.rs  mouse_control_action.rs  mouse_recorder_action.rs  registry_operations.rs  run_command.rs  send_keys_action.rs  window_actions.rs
src/core/actions/tests/: mod.rs  mouse_control_test.rs  mouse_recorder_test.rs  send_keys_test.rs  window_actions_test.rs
src/core/globals/: local.rs  mod.rs  mqtt.rs  redis.rs
src/core/plugin/: discovery.rs  loader.rs  mod.rs  registry.rs  traits.rs
src/eg/: bunch.rs  config.rs  globals.rs  mod.rs  prelude.rs  styles.rs
src/eg/action/: base.rs  common.rs  group.rs  item.rs  mod.rs  tests.rs
src/eg/classes/: action_config_dialog.rs  actions.rs  config_dialogs.rs  config_view.rs  dialog.rs  drag_drop.rs  drag_drop.rs.bak  fixed_drag_drop.rs  guid.rs  log_ctrl.rs  main_frame.rs  menu.rs  mod.rs  plugin_config.rs  property_grid.rs  status_bar.rs  toolbar.rs  tree_ctrl.rs  types.rs
src/eg/classes/mainframe/: COMPARISON.md  TODO.md  readme.md
src/eg/dialogs/: config_file_dialog.rs  mod.rs
src/eg/styles/: log.css
src/eg/tree/: document.rs  folder.rs  item.rs  link.rs  macro_.rs  mod.rs  root.rs
src/eg/winapi/: mod.rs  utils.rs
src/plugins/logger/: mod.rs
src/testing/: fixtures.rs  helpers.rs  mocks.rs  mod.rs
src/testing/helpers/: win32.rs
src/testing/mocks/: win32.rs
src/utils/: gtk_utils.rs  mod.rs  path.rs
src/win32/: error.rs  hook.rs  mod.rs  pipe.rs  traits.rs  utils.rs  window.rs
src/win32/tests/: window.rs
