[package]
name = "eventghost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eventghost-bin"
path = "src/bin/eventghost.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]}
egui = "0.24"
eframe = "0.24"
winapi = { version = "0.3", features = ["winuser", "windef"] }
dirs = "5.0"
libloading = "0.8"
notify = "6.1"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bitflags = "2.4"

[dev-dependencies]
tokio-test = "0.4" 