[package]
name = "eventghost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-gui"
path = "src/bin/test-gui.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
libloading = "0.8"
notify = "6.1"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bitflags = "2.4"
gtk = { version = "0.6", package = "gtk4", features = ["v4_8"] }
gdk = "0.6" 
gio = { version = "0.17", features = ["v2_66"] }
glib = { version = "0.17", features = ["v2_66"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }

[dev-dependencies]
tokio-test = "0.4" 

[build-dependencies]
pkg-config = "0.3"

[features]
default = [] 