[package]
name = "eventghost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-gui"
path = "src/bin/test-gui.rs"

[lib]
name = "eventghost"
# Only use rlib for building to avoid "export ordinal too large" error
crate-type = ["rlib"]

# Configure what symbols are exported from the DLL to avoid "export ordinal too large" errors
[package.metadata.dlltool]
prefix-symbols = false
no-leading-underscore = true

# Add a dependency to help control DLL exports
[dependencies]
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
libloading = "0.8"
notify = "6.1"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bitflags = "2.4"
gtk = { version = "0.7", package = "gtk4" }
gdk4 = "0.6"
gio = "0.18"
glib = "0.18"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
clap = { version = "4.4", features = ["derive"] }
quick-xml = { version = "0.30", features = ["serialize"] }

[dev-dependencies]
tokio-test = "0.4" 

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
plugin_hot_reload = []
testing = []  # Feature for testing utilities 
production = []  # Production feature for future use

[workspace]
members = [
    "plugins/logger",
] 

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
strip = false 