[package]
name = "logger-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "logger"
crate-type = ["cdylib"]

[dependencies]
eventghost = { path = "../.." }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] } 